<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".presentation.MainActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraint_layout_0"
            android:layout_width="0dp"
            android:layout_height="wrap_content"

            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/post_to_database"
                android:id="@+id/text"
                android:textSize="20sp"
                android:padding="16dp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="parent"/>

        <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/error_text"
                android:layout_width="0dp"
                android:layout_height="wrap_content"

                android:maxLines="2"
                android:textSize="12sp"
                android:padding="8dp"
                android:textStyle="italic"
                android:textColor="@color/colorAccent"

                app:layout_constraintBottom_toBottomOf="@id/text"
                app:layout_constraintLeft_toRightOf="@id/text"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="@id/text"/>

        <androidx.appcompat.widget.AppCompatEditText
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:hint="@string/field_name"
                android:textSize="12sp"
                android:id="@+id/left"
                android:padding="16dp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toLeftOf="@id/right"
                app:layout_constraintTop_toBottomOf="@id/text"
                tools:ignore="Autofill,TextFields"/>

        <androidx.appcompat.widget.AppCompatEditText
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:hint="@string/value"
                android:textSize="12sp"
                android:id="@+id/right"
                android:padding="16dp"
                app:layout_constraintLeft_toRightOf="@id/left"
                app:layout_constraintRight_toLeftOf="@id/button"
                app:layout_constraintTop_toBottomOf="@id/text"
                tools:ignore="Autofill,TextFields"/>

        <androidx.appcompat.widget.AppCompatButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/button"
                android:text="@string/send"
                android:padding="16dp"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/text"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/reconnect"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:padding="16dp"
            android:text="@string/reconnect"
            android:visibility="gone"

            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/constraint_layout_0"/>

    <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/firebase_contents"
            android:layout_width="0dp"
            android:layout_height="0dp"

            android:textSize="12sp"
            android:gravity="top"
            android:padding="8dp"

            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/reconnect"/>

</androidx.constraintlayout.widget.ConstraintLayout>